--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0.130", features = ["derive"] }
 void = { version = "1.0.2" }
+chrono = { version = "0.4", features = ["serde"] }
+serde_with = "1.11.0"
